[package]
name = "chyp"
version = "0.1.0"
edition = "2021"
description = "Cloud Hypervisor CLI tool for VM management"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
anyhow = "1"
libc = "0.2"
